# RP2040-FreeRTOS-Simplified

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
